--- a/styles/styles.css
+++ b/styles/styles.css
@@ -251,6 +251,7 @@ body {
   font-family: "DM Sans", sans-serif;
   line-height: 140%;
   color: #4933BC;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5 {
@@ -930,6 +931,7 @@ footer p {
   .mainNav ul {
     position: fixed;
     top: 10.5rem;
+    right: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
